appId: co.openvine.app
---
#TC browse on the popular videos screen, 
# given an already logged in user.
#Steps:
# 1. Tap on Popular Videos: Validate the screen
# 2. Tap on the 1st video: Validate playback
# 3. Tap on the Popular Videos tab: Validate the screen again
# 4. Scroll downwards till "coffee" video is displayed: Validate screen
# 5. Scroll to the very bottom: 

# 1. Tap on Popular Videos: Validate the screen
- tapOn:
    id: explore_tab
- tapOn: |-
    Popular
    Tab 3 of 5
- runFlow: ../asserts/assertExplore.yaml

# 2. Tap on the 1st video: Validate playback
- tapOn:
    id: play_button
- runFlow: ../asserts/assertVideoPlayback.yaml

# 3. Tap on the Popular Videos tab: Validate the screen again
- tapOn: |-
    Popular
    Tab 3 of 5
- runFlow: ../asserts/assertExplore.yaml

# 4. Scroll downwards till "coffee" video is displayed: Validate screen
- scrollUntilVisible:
    element:
      text: |-
        Play video
        2s
        Unknown
        lamp
        0
    timeout: 6000
    speed: 5